--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,72 @@
-@import url('./Assests/Css/fonts.css');
+@import url("./Assests/Css/fonts.css");
+@import url("./Assests/Css/typography.css");
+
+body {
+  background: #f1f1f1;
+}
+
+.container-wrapper {
+  margin: 40px 0;
+}
+.container-wrapper > h1 {
+  font-weight: 300;
+}
+.container {
+  background: #fff;
+  margin: 0 auto 30px;
+  width: 50%;
+  padding: 10px;
+  border-radius: 10px;
+  animation: slideIn 0.5s ease-in-out;
+  position: relative;
+  box-shadow: none;
+  transition: box-shadow 0.5s ease-out;
+}
+.container:focus-within {
+  box-shadow: 10px 10px 50px #ccc;
+  transition: box-shadow 0.5s ease-out;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes slideIn {
   from {
-    transform: rotate(0deg);
+    top: -20px;
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    top: 0px;
+    opacity: 1;
+  }
+}
+@keyframes slideOut {
+  from {
+    bottom: -20px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0px;
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .container-wrapper {
+    margin: 20px 0;
+  }
+  .container-wrapper > h1 {
+    margin-top: 0;
+  }
+  .add-btn svg,
+  .inputSection > svg {
+    width: 20px;
+    height: 20px;
+  }
+
+  .container {
+    width: 90%;
+    margin: 0 auto 15px;
   }
 }
